Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <h2 class="section-title">Contatti</h2>
     <div class="grid">
       <article class="card wide">
-        <p>Per collaborazioni, stampa o domande: <a href="mailto:castelloululi@gmail.com">castelloululi@gmail.com</a></p>
+        <p>Per collaborazioni, stampa o domande: <a href="mailto:myivemi@gmail.com">myivemi@gmail.com</a></p>
         <p>Privacy & note legali: <a href="https://sites.google.com/view/ivemi-privacy" target="_blank" rel="noopener">pagina dedicata</a></p>
       </article>
     </div>
